--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vsc-ngc-snippet-generator",
   "version": "1.1.0",
   "description": "Visual Studio Code Snippet Generator for Angular Components",
+  "bin": {
+    "vsc-ngc-snippet-generator": "index.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jefvanhoyweghen/vsc-ngc-snippet-generator.git"
